<resources>
    <string name="app_name">Latihan3_Chapter2</string>
    <string name="headerlogin">LOGIN</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="nama">Name</string>
    <string name="ulangiPassword">Repeat Password</string>
    <string name="btnSignup">Sign Up</string>
    <string name="helloWelcome">Hello, Welcome</string>
</resources>